--- a/secrets.defaults.properties
+++ b/secrets.defaults.properties
@@ -1,3 +1,3 @@
 BACKEND_URL="http://192.168.0.109:8080"
-WEBSOCKET_URL="ws://192.168.0.109:8080"
+WEBSOCKET_URL="ws://192.168.0.109:8080/realtimeChat"
 # BACKEND_URL="http://127.0.0.1:8080" localhost
